# spotuify

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  flake.nix  install.sh  security_best_practices_report.md  vercel.json
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release-lockfile.yml  release-please.yml  release.yml
clients/macos/: project.yml
crates/spotuify-audio/: Cargo.toml
crates/spotuify-cli/: Cargo.toml
crates/spotuify-cli/src/: agent_playlists.rs  cli_args.rs  commands.rs  lib.rs  output.rs
crates/spotuify-core/: Cargo.toml
crates/spotuify-daemon/: Cargo.toml
crates/spotuify-keychain/: Cargo.toml
crates/spotuify-lyrics/: Cargo.toml
crates/spotuify-mcp/: Cargo.toml
crates/spotuify-player/: Cargo.toml
crates/spotuify-player/src/: lib.rs
crates/spotuify-player/src/backends/: audio_counter_tap.rs  first_party_auth.rs  librespot_sink_chain.rs  mock.rs  mod.rs  premium_gate.rs  spotifyd.rs  token_bridge.rs
crates/spotuify-player/src/backends/embedded/: mod.rs
crates/spotuify-player/tests/: premium_gate.rs  recovering_sink.rs
crates/spotuify-protocol/: Cargo.toml
crates/spotuify-search/: Cargo.toml
crates/spotuify-spotify/: Cargo.toml
crates/spotuify-tui/: Cargo.toml
crates/spotuify-tui/src/: app.rs  lib.rs  tui_actions.rs  ui.rs
crates/spotuify-tui/src/widgets/: mod.rs  skeleton.rs  spectrum.rs  style.rs
docs/: README.md  hero-video-script.md  security-audit-rubric-v2.md  security-audit-rubric.md  security-audit-v2-report.md
scripts/: cargo-nextest  cargo-test  ga-live-smoke.sh  smoke.sh  verify_release_checksums.sh
site/: .gitignore  astro.config.mjs  package-lock.json  package.json  vercel.json
src/: agent_playlists.rs  analytics.rs  app.rs  auth.rs  commands.rs  config.rs  diagnostics.rs  logging.rs  main.rs  output.rs  protocol.rs  reindex.rs  search.rs  selection.rs  spotify.rs  spotifyd.rs  store.rs  sync.rs  tui_actions.rs  ui.rs
tests/: cli_cache.rs  cli_exit_codes.rs  cli_fake_daemon.rs  cli_help.rs  ga_live_smoke_script.rs  ga_release_posture.rs  workspace_boundaries.rs
(+403 files in other folders)
