[package]
name = "spotuify-player"
version.workspace = true
edition.workspace = true
publish = false
description = "Player backend trait + implementations (spotifyd, embedded librespot in Phase 9, connect-only). Currently empty scaffold; legacy spotifyd lives in the binary's src/spotifyd.rs."

[dependencies]
spotuify-core = { workspace = true }
spotuify-spotify = { workspace = true }

anyhow = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
