[package]
name = "spotuify-tui"
version.workspace = true
edition.workspace = true
publish = false
description = "Ratatui frontend. Empty scaffold; legacy TUI in the binary's src/app.rs, src/ui.rs, src/tui_actions.rs."

[dependencies]
spotuify-core = { workspace = true }
spotuify-protocol = { workspace = true }
spotuify-store = { workspace = true }
spotuify-search = { workspace = true }
spotuify-spotify = { workspace = true }
spotuify-player = { workspace = true }
spotuify-sync = { workspace = true }
spotuify-cli = { workspace = true }
spotuify-daemon = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
ratatui-image = { workspace = true }
image = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true }

[lints]
workspace = true
